@@ -1,3 +1,6 @@
+2013-07-09 arnaud.fontaine
+* ZODB Components: Only Developer Role must be able to invalidate/delete/validate Components.
+
 2013-07-04 arnaud.fontaine
 * ZODB Components: Version was not displayed properly in Component view.
 
